--- a/Main_Code/DataNews.ipynb
+++ b/Main_Code/DataNews.ipynb
@@ -198,9 +198,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pyvizenv] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-pyvizenv-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -212,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
