--- a/Main_Code/Scopus_Search-Copy1.ipynb
+++ b/Main_Code/Scopus_Search-Copy1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1531,12 +1531,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Declare necessary parameters for Scopus request API search tool\n",
-    "url = \"http://api.elsevier.com/content/search/scopus?\" + \"?format=json\"\n",
+    "url = \"http://api.elsevier.com/content/search/scopus?\" + \"cursor=*\"\n",
     "headers = {\"X-ELS-APIKey\": api_key, 'Accept':'application/json'}\n",
     "view = \"Complete\"\n",
     "field = [\"dc:description\"]"
@@ -1544,7 +1544,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://api.elsevier.com/content/search/scopus?cursor=*'"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {
     "tags": []
    },
@@ -1569,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1579,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {
     "tags": []
    },
@@ -1587,10 +1607,10 @@
     {
      "data": {
       "text/plain": [
-       "[140278]"
+       "[140293]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1604,7 +1624,7 @@
     "    \n",
     "def total_results_funt(date_list):\n",
     "    for i in date_list:\n",
-    "        parameters = {\"query\": query, \"view\": view, \"date\": str(i), \"count\": 25, \"start\": 0}\n",
+    "        parameters = {\"query\": query, \"view\": view, \"date\": str(i)}\n",
     "        article_response = requests.get(url, headers=headers, params=parameters)\n",
     "        article_response_json = article_response.json()\n",
     "        total_results.append(int(article_response_json['search-results']['opensearch:totalResults']))\n",
@@ -1616,30 +1636,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Search request function \n",
     "# Scopus request has a maximum of 5000 articles returned per year\n",
+    "\n",
     "def search_request_funt(query, start_year, end_year):\n",
     "    scopus_search_appended_df = pd.DataFrame()\n",
     "    for year in range (start_year, end_year + 1):\n",
-    "        parameters = {\"query\": query, \"view\": view, \"date\": str(year), \"start\": 0}\n",
+    "        parameters = {\"query\": query, \"view\": view, \"date\": str(year)}\n",
     "        article_response = requests.get(url, headers=headers, params=parameters)\n",
     "        article_response_json = article_response.json()\n",
-    "        total_results = int(article_response_json['search-results']['opensearch:totalResults'])\n",
-    "        for n in range(0, total_results, 25):\n",
-    "            parameters = {\"query\": query, \"view\": view, \"date\": str(year), \"count\": 25, \"start\": n}\n",
-    "            article_response = requests.get(url, headers=headers, params=parameters)\n",
-    "            article_response_json = article_response.json()\n",
-    "            scopus_articles_df = pd.DataFrame.from_dict(json_normalize(article_response_json, meta=[\"search-results\"], record_path=[\"search-results\", \"entry\"]), orient=\"columns\")\n",
-    "            date_title_description_df = scopus_articles_df[[\"prism:coverDate\", \"dc:title\", \"dc:description\"]]\n",
-    "            date_title_description_df.columns = ['Date','Title','Content']\n",
-    "            pd.to_datetime(date_title_description_df['Date'], format = \"%Y-%m-%d\")\n",
-    "            date_title_description_df.sort_values(by='Date')\n",
-    "            date_title_description_df = date_title_description_df.set_index('Date')\n",
-    "            scopus_search_appended_df = scopus_search_appended_df.append(date_title_description_df)\n",
+    "        scopus_articles_df = pd.DataFrame.from_dict(json_normalize(article_response_json, meta=[\"search-results\"], record_path=[\"search-results\", \"entry\"]), orient=\"columns\")\n",
+    "        date_title_description_df = scopus_articles_df[[\"prism:coverDate\", \"dc:title\", \"dc:description\"]]\n",
+    "        date_title_description_df.columns = ['Date','Title','Content']\n",
+    "        pd.to_datetime(date_title_description_df['Date'], format = \"%Y-%m-%d\")\n",
+    "        date_title_description_df.sort_values(by='Date')\n",
+    "        date_title_description_df = date_title_description_df.set_index('Date')\n",
+    "        scopus_search_appended_df = scopus_search_appended_df.append(date_title_description_df)\n",
     "    return scopus_search_appended_df\n",
     "            \n",
     "            \n",
@@ -1648,20 +1664,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "def search_request_funt(query, start_year, end_year):\n",
+    "    cursor = \"cursor=*\"\n",
+    "    url = \"http://api.elsevier.com/content/search/scopus?\" + cursor\n",
     "    scopus_search_appended_df = pd.DataFrame()\n",
-    "    n = 0\n",
     "    for year in range (start_year, end_year + 1):\n",
-    "        parameters = {\"query\": query, \"view\": view, \"date\": str(year), \"start\": 0}\n",
+    "        parameters = {\"query\": query, \"view\": view, \"date\": str(year)}\n",
     "        article_response = requests.get(url, headers=headers, params=parameters)\n",
     "        article_response_json = article_response.json()\n",
     "        total_results = int(article_response_json['search-results']['opensearch:totalResults'])\n",
-    "        while total_results > n:\n",
-    "            parameters = {\"query\": query, \"view\": view, \"date\": str(year), \"count\": 25, \"start\": n}\n",
+    "        for n in range(0, total_results, 25):\n",
     "            article_response = requests.get(url, headers=headers, params=parameters)\n",
     "            article_response_json = article_response.json()\n",
     "            scopus_articles_df = pd.DataFrame.from_dict(json_normalize(article_response_json, meta=[\"search-results\"], record_path=[\"search-results\", \"entry\"]), orient=\"columns\")\n",
@@ -1671,47 +1687,19 @@
     "            date_title_description_df.sort_values(by='Date')\n",
     "            date_title_description_df = date_title_description_df.set_index('Date')\n",
     "            scopus_search_appended_df = scopus_search_appended_df.append(date_title_description_df)\n",
-    "            n = n + 25\n",
-    "    return scopus_search_appended_df"
+    "            cursor = \"cursor=\" + article_response_json['search-results']['cursor']['@next']\n",
+    "    return article_response_json"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scopus_search_appended_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'search-results'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-5456a960b732>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Generate DataFrame\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_option\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'display.max_rows'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mscopus_search_appended_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msearch_request_funt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstart_year\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend_year\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mscopus_search_appended_df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-6-0c22e587c6a9>\u001b[0m in \u001b[0;36msearch_request_funt\u001b[1;34m(query, start_year, end_year)\u001b[0m\n\u001b[0;32m     11\u001b[0m             \u001b[0marticle_response\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0murl\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mheaders\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[0marticle_response_json\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marticle_response\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m             \u001b[0mscopus_articles_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjson_normalize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marticle_response_json\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmeta\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"search-results\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecord_path\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"search-results\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"entry\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morient\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"columns\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m             \u001b[0mdate_title_description_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mscopus_articles_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"prism:coverDate\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"dc:title\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"dc:description\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[0mdate_title_description_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'Date'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Title'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Content'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\pyvizenv\\lib\\site-packages\\pandas\\io\\json\\normalize.py\u001b[0m in \u001b[0;36mjson_normalize\u001b[1;34m(data, record_path, meta, meta_prefix, record_prefix, errors, sep)\u001b[0m\n\u001b[0;32m    265\u001b[0m                 \u001b[0mrecords\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrecs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    266\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 267\u001b[1;33m     \u001b[0m_recursive_extract\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecord_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    268\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    269\u001b[0m     \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrecords\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\pyvizenv\\lib\\site-packages\\pandas\\io\\json\\normalize.py\u001b[0m in \u001b[0;36m_recursive_extract\u001b[1;34m(data, path, seen_meta, level)\u001b[0m\n\u001b[0;32m    236\u001b[0m                 \u001b[1;32mfor\u001b[0m \u001b[0mval\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmeta\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmeta_keys\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    237\u001b[0m                     \u001b[1;32mif\u001b[0m \u001b[0mlevel\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mval\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 238\u001b[1;33m                         \u001b[0mseen_meta\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_pull_field\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mval\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    239\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    240\u001b[0m                 _recursive_extract(obj[path[0]], path[1:],\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\pyvizenv\\lib\\site-packages\\pandas\\io\\json\\normalize.py\u001b[0m in \u001b[0;36m_pull_field\u001b[1;34m(js, spec)\u001b[0m\n\u001b[0;32m    187\u001b[0m                 \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfield\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    188\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 189\u001b[1;33m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mspec\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    190\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    191\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'search-results'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Generate DataFrame\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "scopus_search_appended_df = search_request_funt(query, start_year, end_year)\n",
-    "scopus_search_appended_df"
+    "search_request_funt(query, start_year, end_year)\n"
    ]
   },
   {
