--- a/Main_Code/Scopus_Search_V4.ipynb
+++ b/Main_Code/Scopus_Search_V4.ipynb
@@ -1706,8 +1706,20 @@
     "#scopus = search_scopus_dash().search_request_funt()\n",
     "    \n",
     "\n",
-    "#class word_cloud_dash(search_scopus_params, word_params):\n",
+    "class word_cloud_dash(param.Parameterized):\n",
     "    \n",
+    "    \n",
+    "    \n",
+    "     # Y value multiselectors\n",
+    "    Column_Selector = param.ObjectSelector(default = 'Title', objects=['Title', 'Content'])\n",
+    "\n",
+    "    # Word Count Slider\n",
+    "    Word_Slider = param.Integer(15, bounds=(5,50))\n",
+    "\n",
+    "    # Stop word addition\n",
+    "    Text_Input = param.String(default='', doc= 'Type Words Here, Seperated by a Space')\n",
+    "    \n",
+    "    single_file = param.FileSelector(path='../../*/*.py*', precedence=0.5)\n",
     "\n",
     "    \n",
     "    def csv_download(self):\n",
@@ -1784,9 +1796,7 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "help(pn.widgets.DataFrame)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
