--- a/Main_Code/Scopus_Search_2_Class.ipynb
+++ b/Main_Code/Scopus_Search_2_Class.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,7 @@
     "import time\n",
     "import datetime as dt\n",
     "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
     "lemmatizer = WordNetLemmatizer()\n",
     "pn.extension()\n",
     "import hvplot.pandas"
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {
     "tags": []
    },
@@ -58,50 +59,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Launching server at http://localhost:53274\n"
+      "Launching server at http://localhost:59537\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<bokeh.server.server.Server at 0x1a915116a48>"
+       "<bokeh.server.server.Server at 0x2b5e0feedc8>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Search request function \n",
+    "# Search request dashboard Class\n",
     "\n",
     "class search_scopus_dash(param.Parameterized):\n",
     "    \n",
+    "    # Search Term Input to query search, default is \"Nanosafety\"\n",
     "    Query  = param.String(default=\"Nanosafety\", doc=\"Insert query term(s)\")\n",
     "    \n",
+    "    # Year range selection parameter for search\n",
     "    Year_Range = param.Range((2005, 2010), bounds=(1970, 2021))\n",
     "    \n",
+    "    # Action param to initiate search\n",
     "    generate_sample_df = param.Action(lambda self: self.update_sample_df(), label=\"Generate Data\", doc=\"\"\"\n",
     "      An action callback which will update the sample_df.\"\"\")\n",
     "    \n",
-    "    sample_df = param.DataFrame(doc=\"\"\"\n",
-    "      The current dataframe of samples.\"\"\")\n",
+    "    # Dataframe param to store data from scopus search API\n",
+    "    sample_df = param.DataFrame()\n",
     "    \n",
     "    file_name = param.String(default=\"data.csv\", doc=\"\"\"\n",
     "      The filename to save to.\"\"\")\n",
     "    \n",
+    "    # Initiate desired parameters\n",
     "    def __init__(self, **params):\n",
+    "        \n",
     "        super().__init__(**params)\n",
     "        self.search_request_funt()\n",
     "        self.update_sample_df()        \n",
     "        self.download = pn.widgets.FileDownload(name=\"Download Data\", filename=self.file_name, callback=self._download_callback, button_type=\"primary\")\n",
-    "        self.table = pn.widgets.DataFrame(self.sample_df.head(10), height=360)\n",
+    "        self.table = pn.widgets.DataFrame(self.sample_df, height=300)\n",
     "        \n",
-    "        \n",
+    "    # Upate filename in download widget  \n",
     "    @pn.depends('file_name', watch=True)\n",
     "    def _update_filename(self):\n",
     "        self.download.filename = self.file_name\n",
     "    \n",
+    "    # Download function for excel file\n",
     "    def _download_callback(self):\n",
     "        \"\"\"\n",
     "        A FileDownload callback will return a file-like object which can be serialized\n",
@@ -114,7 +121,7 @@
     "        return sio\n",
     "    \n",
     "    \n",
-    "    \n",
+    "    # Scopus API search request function to generate dataframe with columns for date, title, and abstrast with queried search term b/t selected year range\n",
     "    @param.depends('file_name', \"Query\", \"Year_Range\", watch=True)\n",
     "    def search_request_funt(self):\n",
     "    \n",
@@ -133,6 +140,7 @@
     "        article_response = requests.get(url, headers=headers, params=parameters)\n",
     "        article_response_json = article_response.json()\n",
     "        total_results = int(article_response_json['search-results']['opensearch:totalResults'])\n",
+    "        # Loop to grab all API data\n",
     "        while article_response_json['search-results'].get('entry') is not None:\n",
     "            url = \"http://api.elsevier.com/content/search/scopus?\"\n",
     "            parameters = {\"query\": self.Query, \"view\": \"Complete\", \"date\": date, \"field\": field, \"cursor\": cursor}\n",
@@ -149,7 +157,7 @@
     "                cursor = article_response_json['search-results']['cursor']['@next']\n",
     "        return scopus_search_appended_df\n",
     "\n",
-    "   \n",
+    "    # Update dataframe with results\n",
     "    @pn.depends('file_name', watch=True)\n",
     "    def update_sample_df(self, event=None):\n",
     "        self.sample_df = pd.DataFrame(self.search_request_funt())\n",
@@ -158,6 +166,10 @@
     "    def _update_table(self):\n",
     "        if hasattr(self, \"table\"):\n",
     "            self.table.value = self.sample_df\n",
+    "            \n",
+    "    def save_sample_data(self, event=None):\n",
+    "        if not self.sample_df is None:\n",
+    "            self.sample_df\n",
     "    \n",
     "    def freq_plot_funt(self):\n",
     "        scopus_search_appended_df = self.sample_df\n",
@@ -180,13 +192,13 @@
     "\n",
     "    def view(self):\n",
     "        return pn.Row(pn.Column(\n",
-    "            \"## Generate and Download Data from Scopus API Request\",\n",
+    "            \"## Generate and Download Data from Scopus API Request\", \"*Be patient with the search request depending on the size of the request can take between a few to several minutes.*\",\n",
     "            pn.Row(\n",
     "                pn.Param(self, parameters=['Query', 'Year_Range', 'generate_sample_df'], show_name=False, widgets={\"generate_sample_df\": {\"button_type\": \"primary\"}}),\n",
     "                pn.Column(self.param.file_name, self.download, align='end', margin=(10,5,5,5)),\n",
     "            ),\n",
     "            \"**Scopus DataFrame **\",\n",
-    "            self.table), self.freq_plot_funt)\n",
+    "            pn.WidgetBox(self.table)), self.freq_plot_funt)\n",
     "\n",
     "\n",
     "    \n",
@@ -202,11 +214,15 @@
     "    \n",
     "    data = param.DataFrame()\n",
     "    \n",
+    "    \n",
+    "    \n",
     "    def __init__(self, **params):\n",
     "        self.param.File_Input.default = pn.widgets.FileInput()\n",
+    "        blank_title = px.imshow(np.full((600, 600, 3), 255, dtype = np.uint8), title= \"Upload File to Generate Title WordCloud\").update_xaxes(showticklabels=False).update_yaxes(showticklabels=False)\n",
+    "        blank_content = px.imshow(np.full((600, 600, 3), 255, dtype = np.uint8), title= \"Upload File to Generate Content WordCloud\").update_xaxes(showticklabels=False).update_yaxes(showticklabels=False)\n",
     "        super().__init__(**params)\n",
-    "        self.plotly_pane_title = pn.pane.Plotly(height=800)\n",
-    "        self.plotly_pane_content = pn.pane.Plotly(height=800)\n",
+    "        self.plotly_pane_title = pn.pane.Plotly(blank_title, height = 600, width = 600)\n",
+    "        self.plotly_pane_content = pn.pane.Plotly(blank_content, height = 600, width = 600)\n",
     "        \n",
     "    @pn.depends(\"File_Input.value\", watch=True)\n",
     "    def _parse_file_input(self):\n",
@@ -241,17 +257,19 @@
     "                output_content = [word.lower() for word in lem_content if word.lower() not in sw.union(sw_addons)]\n",
     "                full_string_title = ' '.join(output_title)\n",
     "                full_string_content = ' '.join(output_content)\n",
-    "                wc_title = WordCloud(width=800, height=800, background_color=\"white\", max_words= self.Word_Slider).generate(full_string_title)\n",
-    "                wc_content = WordCloud(width=800, height=800, background_color=\"white\", max_words= self.Word_Slider).generate(full_string_content)\n",
-    "                \n",
-    "                fig_title = px.imshow(wc_title, title= \"Title WordCloud\")\n",
+    "                wc_title = WordCloud(width=600, height=600, background_color=\"white\", max_words= self.Word_Slider).generate(full_string_title)\n",
+    "                wc_content = WordCloud(width=600, height=600, background_color=\"white\", max_words= self.Word_Slider).generate(full_string_content)\n",
+    "            \n",
+    "                fig_title = px.imshow(wc_title, title = \"Title WordCloud\", width=600, height=600)\n",
     "                fig_title.update_xaxes(showticklabels=False)\n",
     "                fig_title.update_yaxes(showticklabels=False)\n",
+    "                fig_title.update_layout(title_font_color=\"black\", title_font_family= \"Arial\", title_font_size= 45, title_x = 0.5, title_y= 0.95)\n",
     "                \n",
-    "                fig_content = px.imshow(wc_content, title = \"Abstract WordCloud\")\n",
+    "                fig_content = px.imshow(wc_content, title = \"Abstract WordCloud\", width=600, height=600)\n",
     "                fig_content.update_xaxes(showticklabels=False)\n",
     "                fig_content.update_yaxes(showticklabels=False)\n",
-    "                \n",
+    "                fig_content.update_layout(title_font_color=\"black\", title_font_family= \"Arial\", title_font_size= 45, title_x = 0.5, title_y= 0.95)\n",
+    "            \n",
     "                self.plotly_pane_title.object = fig_title\n",
     "                self.plotly_pane_content.object = fig_content\n",
     "\n",
@@ -267,9 +285,10 @@
     "                                 \"throttled\": True,\n",
     "                             },\n",
     "                         })),\n",
-    "                         pn.Row(self.plotly_pane_title, self.plotly_pane_content)\n",
+    "                         pn.Row(pn.Column(self.plotly_pane_title, background='WhiteSmoke'), pn.Column(self.plotly_pane_content, background='WhiteSmoke'))\n",
     "                        )\n",
     "        \n",
+    "# Save dashboard for visualization\n",
     "search = search_scopus_dash()\n",
     "\n",
     "search_view = search.view()\n",
@@ -287,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {
     "tags": []
    },
@@ -1191,16 +1210,16 @@
       " |  get_value_generator = functools.partial(<function Parameters.deprecate...\n",
       " |      Inspect .param.get_value_generator method for the full docstring\n",
       " |  \n",
-      " |  inspect_value = functools.partial(<function Parameters.deprecate...1A9...\n",
+      " |  inspect_value = functools.partial(<function Parameters.deprecate...2B5...\n",
       " |      Inspect .param.inspect_value method for the full docstring\n",
       " |  \n",
-      " |  params = functools.partial(<function Parameters.deprecate...1A97D14143...\n",
+      " |  params = functools.partial(<function Parameters.deprecate...2B5CE77143...\n",
       " |      Inspect .param.params method for the full docstring\n",
       " |  \n",
       " |  set_dynamic_time_fn = functools.partial(<function Parameters.deprecate...\n",
       " |      Inspect .param.set_dynamic_time_fn method for the full docstring\n",
       " |  \n",
-      " |  set_param = functools.partial(<function Parameters.deprecate...1A97D14...\n",
+      " |  set_param = functools.partial(<function Parameters.deprecate...2B5CE77...\n",
       " |      Inspect .param.set_param method for the full docstring\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
@@ -1259,7 +1278,7 @@
     }
    ],
    "source": [
-    "help(px.imshow)"
+    "help(pn.pane.Plotly)"
    ]
   },
   {
