--- a/Main_Code/Scopus_Search_2_Class.ipynb
+++ b/Main_Code/Scopus_Search_2_Class.ipynb
@@ -1837,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -1846,16 +1846,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Launching server at http://localhost:53489\n"
+      "Launching server at http://localhost:60306\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<bokeh.server.server.Server at 0x190837ef688>"
+       "<bokeh.server.server.Server at 0x23ec8c43948>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1984,8 +1984,7 @@
     "                pn.Param(self, parameters=['Query', 'Year_Range', 'generate_sample_df'], show_name=False, widgets={\"generate_sample_df\": {\"button_type\": \"primary\"}}),\n",
     "                pn.Column(self.param.file_name, self.download, align='end', margin=(10,5,5,5)),\n",
     "            ),\n",
-    "            \"**Scopus DataFrame **\",\n",
-    "            pn.WidgetBox(self.table)), self.freq_plot_funt)\n",
+    "            self.table), self.freq_plot_funt)\n",
     "\n",
     "\n",
     "    \n",
